security/kyverno/disallow-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"kyverno.io/v1","kind":"ClusterPolicy","metadata":{"annotations":{},"name":"disallow-root-user"},"spec":{"rules":[{"match":{"resources":{"kinds":["Pod"]}},"name":"check-root-user","validate":{"message":"Running as root is not allowed","pattern":{"spec":{"containers":[{"securityContext":{"runAsNonRoot":true}}]}}}}],"validationFailureAction":"Audit"}}
  creationTimestamp: "2026-03-21T22:09:02Z"
  generation: 1
  name: disallow-root-user
  resourceVersion: "204283"
  uid: eed85f0a-5582-4464-83fb-d838c05950d2
spec:
  admission: true
  background: true
  emitWarning: false
  rules:
  - match:
      resources:
        kinds:
        - Pod
    name: check-root-user
    skipBackgroundRequests: true
    validate:
      allowExistingViolations: true
      message: Running as root is not allowed
      pattern:
        spec:
          containers:
          - securityContext:
              runAsNonRoot: true
  validationFailureAction: Audit
status:
  autogen:
    rules:
    - match:
        resources:
          kinds:
          - DaemonSet
          - Deployment
          - Job
          - ReplicaSet
          - ReplicationController
          - StatefulSet
      name: autogen-check-root-user
      skipBackgroundRequests: true
      validate:
        allowExistingViolations: true
        message: Running as root is not allowed
        pattern:
          spec:
            template:
              spec:
                containers:
                - securityContext:
                    runAsNonRoot: true
    - match:
        resources:
          kinds:
          - CronJob
      name: autogen-cronjob-check-root-user
      skipBackgroundRequests: true
      validate:
        allowExistingViolations: true
        message: Running as root is not allowed
        pattern:
          spec:
            jobTemplate:
              spec:
                template:
                  spec:
                    containers:
                    - securityContext:
                        runAsNonRoot: true
  conditions:
  - lastTransitionTime: "2026-04-18T21:21:55Z"
    message: Ready
    reason: Succeeded
    status: "True"
    type: Ready
  rulecount:
    generate: 0
    mutate: 0
    validate: 1
    verifyimages: 0
  validatingadmissionpolicy:
    generated: false
    message: skip generating ValidatingAdmissionPolicy for non CEL rules.
