security/kyverno/require-resource-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"kyverno.io/v1","kind":"ClusterPolicy","metadata":{"annotations":{},"name":"require-resource-limits"},"spec":{"rules":[{"match":{"resources":{"kinds":["Pod"]}},"name":"check-resource-limits","validate":{"message":"Resource limits are required","pattern":{"spec":{"containers":[{"resources":{"limits":{"cpu":"?*","memory":"?*"}}}]}}}}],"validationFailureAction":"Audit"}}
  creationTimestamp: "2026-03-21T22:09:10Z"
  generation: 1
  name: require-resource-limits
  resourceVersion: "204284"
  uid: 291aa648-8376-42ad-93fa-f702f3e64c73
spec:
  admission: true
  background: true
  emitWarning: false
  rules:
  - match:
      resources:
        kinds:
        - Pod
    name: check-resource-limits
    skipBackgroundRequests: true
    validate:
      allowExistingViolations: true
      message: Resource limits are required
      pattern:
        spec:
          containers:
          - resources:
              limits:
                cpu: ?*
                memory: ?*
  validationFailureAction: Audit
status:
  autogen:
    rules:
    - match:
        resources:
          kinds:
          - DaemonSet
          - Deployment
          - Job
          - ReplicaSet
          - ReplicationController
          - StatefulSet
      name: autogen-check-resource-limits
      skipBackgroundRequests: true
      validate:
        allowExistingViolations: true
        message: Resource limits are required
        pattern:
          spec:
            template:
              spec:
                containers:
                - resources:
                    limits:
                      cpu: ?*
                      memory: ?*
    - match:
        resources:
          kinds:
          - CronJob
      name: autogen-cronjob-check-resource-limits
      skipBackgroundRequests: true
      validate:
        allowExistingViolations: true
        message: Resource limits are required
        pattern:
          spec:
            jobTemplate:
              spec:
                template:
                  spec:
                    containers:
                    - resources:
                        limits:
                          cpu: ?*
                          memory: ?*
  conditions:
  - lastTransitionTime: "2026-04-18T21:21:55Z"
    message: Ready
    reason: Succeeded
    status: "True"
    type: Ready
  rulecount:
    generate: 0
    mutate: 0
    validate: 1
    verifyimages: 0
  validatingadmissionpolicy:
    generated: false
    message: skip generating ValidatingAdmissionPolicy for non CEL rules.
